force-app/main/default/objects/malive__IoTDeviceDailySummary__c/malive__IoTDeviceDailySummary__c.object-meta.xml
<CustomObject>
    <label>MA Live Asset Daily Summary</label>
    <nameField>
        <displayFormat>{MMDDYY}-{0000}</displayFormat>
        <label>Daily Summary</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MA Live Asset Daily Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>