force-app/main/default/objects/malive__IoTDeviceDailySummary__c/fields/malive__AverageStopTimeHours__c.field-meta.xml
<CustomField>
    <fullName>malive__AverageStopTimeHours__c</fullName>
    <inlineHelpText>Average duration of user-defined stop events, in hours.</inlineHelpText>
    <label>Average Stop Time (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>