force-app/main/default/objects/malive__IoTDeviceDailySummary__c/fields/malive__CountOfEventsDeviceBatteryOn__c.field-meta.xml
<CustomField>
    <fullName>malive__CountOfEventsDeviceBatteryOn__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of the device battery on events recorded that day, as defined in the daily summary configuration</description>
    <inlineHelpText>Count of the device battery on events recorded that day, as defined in the daily summary configuration</inlineHelpText>
    <label>Count of Events - Device Battery On</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>