force-app/main/default/objects/malive__IoTDeviceDailySummary__c/fields/malive__DeviceId__c.field-meta.xml
<CustomField>
    <fullName>malive__DeviceId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Device Vendor concatenated with Device ID</inlineHelpText>
    <label>Device Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>