force-app/main/default/objects/malive__IoTDeviceDailySummary__c/fields/malive__DriveTimeHours__c.field-meta.xml
<CustomField>
    <fullName>malive__DriveTimeHours__c</fullName>
    <inlineHelpText>Total time spent moving with engine on, in hours</inlineHelpText>
    <label>Drive Time (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>