force-app/main/default/objects/malive__IoTDeviceDailySummary__c/fields/malive__Engine_Hours__c.field-meta.xml
<CustomField>
    <fullName>malive__Engine_Hours__c</fullName>
    <description>Total time the engine runs that day, in hours</description>
    <inlineHelpText>Total time the engine runs that day, in hours</inlineHelpText>
    <label>Engine Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>