force-app/main/default/objects/malive__IoTDeviceDailySummary__c/fields/malive__FastAccelerationCount__c.field-meta.xml
<CustomField>
    <fullName>malive__FastAccelerationCount__c</fullName>
    <description>Number of Quick Acceleration message count</description>
    <inlineHelpText>Count of device messages indicating a quick acceleration event that day (when available)</inlineHelpText>
    <label>Number of Hard Acceleration Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>