force-app/main/default/objects/malive__IoTDeviceDailySummary__c/fields/malive__FirstMessageTimestamp__c.field-meta.xml
<CustomField>
    <fullName>malive__FirstMessageTimestamp__c</fullName>
    <description>This field represents the date and time of the first point received by aws for the day.</description>
    <inlineHelpText>This field represents the date and time of the first point received by aws for the day.</inlineHelpText>
    <label>First Message Timestamp</label>
    <type>DateTime</type>
</CustomField>