force-app/main/default/objects/malive__IoTDeviceDailySummary__c/fields/malive__LastMessageContent__c.field-meta.xml
<CustomField>
    <fullName>malive__LastMessageContent__c</fullName>
    <description>This field represents the full data content of the last point received by aws for the day.</description>
    <inlineHelpText>This field represents the full data content of the last point received by aws for the day.</inlineHelpText>
    <label>Last Message Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>