force-app/main/default/objects/malive__IoTDeviceDailySummary__c/fields/malive__MALiveAsset__c.field-meta.xml
<CustomField>
    <fullName>malive__MALiveAsset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the IoT Device object within the Live pkg</description>
    <label>MA Live IoT Device</label>
    <referenceTo>malive__IoTDevice__c</referenceTo>
    <relationshipLabel>MA Live Asset Daily Summaries</relationshipLabel>
    <relationshipName>MALiveAssetDailySummaries</relationshipName>
    <type>Lookup</type>
</CustomField>