force-app/main/default/objects/malive__IoTDeviceDailySummary__c/fields/malive__MaximumSpeedMPH__c.field-meta.xml
<CustomField>
    <fullName>malive__MaximumSpeedMPH__c</fullName>
    <description>Top speed traveled</description>
    <inlineHelpText>Maximum single speed value received that day (in MPH)</inlineHelpText>
    <label>Maximum Speed (MPH)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>