force-app/main/default/objects/malive__IoTDeviceDailySummary__c/fields/malive__OdometerKm__c.field-meta.xml
<CustomField>
    <fullName>malive__OdometerKm__c</fullName>
    <inlineHelpText>Last available odometer reading of the day, in kilometers</inlineHelpText>
    <label>Odometer (km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>