force-app/main/default/objects/malive__IoTDeviceDailySummary__c/fields/malive__OdometerMiles__c.field-meta.xml
<CustomField>
    <fullName>malive__OdometerMiles__c</fullName>
    <inlineHelpText>Last available odometer reading of the day, in miles</inlineHelpText>
    <label>Odometer (mi)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>