force-app/main/default/objects/malive__IoTDeviceDailySummary__c/fields/malive__TotalDistanceKm__c.field-meta.xml
<CustomField>
    <fullName>malive__TotalDistanceKm__c</fullName>
    <inlineHelpText>Total distance traveled in kilometers</inlineHelpText>
    <label>Total Distance (km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>