force-app/main/default/objects/malive__IoTDeviceDailySummary__c/fields/malive__TotalDistanceMiles__c.field-meta.xml
<CustomField>
    <fullName>malive__TotalDistanceMiles__c</fullName>
    <description>This is the value &apos;distance&apos; from the AWS response</description>
    <inlineHelpText>Total distance traveled in miles</inlineHelpText>
    <label>Total Distance (mi)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>