force-app/main/default/objects/malive__IoTDeviceDailySummary__c/fields/malive__User__c.field-meta.xml
<CustomField>
    <fullName>malive__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User that is assigned to the associated Device at the time that the Summary was created</description>
    <inlineHelpText>The User that is assigned to the associated Device at the time that the Summary was created</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MA_Live_Daily_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>