force-app/main/default/objects/malive__IoTDeviceDailySummary__c/listViews/malive__All.listView-meta.xml
<ListView>
    <fullName>malive__All</fullName>
    <columns>NAME</columns>
    <columns>malive__DeviceId__c</columns>
    <columns>malive__MALiveAsset__c</columns>
    <columns>malive__Driver__c</columns>
    <columns>malive__Date__c</columns>
    <columns>malive__MALiveDailySummaryConfig__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>